added all public js files and handlebars files. Added in homepage route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
+    <link rel = "stylesheet" href="/css/style.css">
 </head>
 <body>
-    {{{ body }}}
+    <header>
+        <nav>
+        <ul>
+            <a href="/homepage">Home</a>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/login">Login</a>
+        </ul>
+        </nav>
+        <h1>The Tech Blog</h1>
+    </header>
+    <main>
+        {{{ body }}}
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
