fixed CSS for login/signup handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,5 @@
 <form class="user-login-form">
+  <h3 id="main-title-login">Login</h3>
   <div>
     <label for="login-username">Username:</label>
     <input type="text" id="login-username"/>
@@ -8,10 +9,10 @@
     <input type="password" id="login-password" />
   </div>
   <div>
-    <button type="submit">Login!</button>
+    <button id="login-submit" type="submit">Login!</button>
   </div>
 </form>
 
-<a href="/signup">Sign up instead.</a>
+<a id="alt-signup" href="/signup">Sign up instead.</a>
 
 <script src="/javascript/login.js"></script>
