--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,5 @@
 <form class="user-signup-form">
+  <h3 id="main-title-signup">Sign Up</h3>
   <div>
     <label for="signup-username">Username:</label>
     <input type="text" id="signup-username"/>
@@ -8,10 +9,10 @@
     <input type="password" id="signup-password" />
   </div>
   <div>
-    <button type="submit">Sign up!</button>
+    <button id="signup-submit" type="submit">Sign up!</button>
   </div>
 </form>
 
-<a href="/login">Login instead.</a>
+<a id="alt-login" href="/login">Login instead.</a>
 
 <script src="/javascript/signup.js"></script>
