--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,132 @@
 :root {
-    --main-black: rgba(0, 0, 0, 0.716);
+    --main-black: rgba(0, 0, 0, 0.881);
     --main-grey: rgb(176, 171, 171);
     --main-green: rgb(191, 218, 191);
 }
 
-header {
+#main-header {
     background-color: var(--main-black);
+    padding-left: 60px;
+    padding-bottom: 10px;
 }
 
 body {
     background-color: var(--main-green);
+}
+
+.main-nav {
+    padding: 20px;
+}
+
+.main-nav a {
+    text-decoration: none;
+    color: var(--main-green);
+    font-size: 35px;
+    padding: 20px 50px;
+
+}
+
+#main-title {
+    padding: 10px;
+    background-color: var(--main-green);
+    font-size: 50px;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-bottom: 20px;
+    height: 50px;
+    width: 330px;
+    text-align: center;
+    box-shadow: 5px 5px 0px rgb(175, 171, 171);
+}
+
+
+
+
+/* LOGIN PAGE */
+.user-login-form {
+    border: 5px solid black;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+#main-title-login {
+color: var(--main-green);
+font-size: 25px;
+background-color: var(--main-black);
+margin-top: 0px;
+padding: 10px 15px;
+
+}
+
+#alt-signup {
+    text-decoration: none;
+    color: var(--main-black);
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+#login-submit {
+    background-color: rgb(92, 90, 90);
+    color: lightgray;
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 5px;
+
+}
+
+.user-login-form div {
+    margin: 10px;
+
+}
+
+/* SIGNUP PAGE */
+
+.user-signup-form {
+    border: 5px solid black;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+#main-title-signup {
+color: var(--main-green);
+font-size: 25px;
+background-color: var(--main-black);
+margin-top: 0px;
+padding: 10px 15px;
+
+}
+
+#alt-login {
+    text-decoration: none;
+    color: var(--main-black);
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+#signup-submit {
+    background-color: rgb(92, 90, 90);
+    color: lightgray;
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 5px;
+
+}
+
+.user-signup-form div {
+    margin: 10px;
+
 }
