--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,15 +7,15 @@
     <link rel = "stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header>
+    <header id="main-header">
         <nav>
-        <ul>
+        <ul class="main-nav">
             <a href="/homepage">Home</a>
             <a href="/dashboard">Dashboard</a>
             <a href="/login">Login</a>
         </ul>
         </nav>
-        <h1>The Tech Blog</h1>
+        <h1 id="main-title">The Tech Blog</h1>
     </header>
     <main>
         {{{ body }}}
