fixed auth issue

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,4 +15,4 @@
 
 <a id="alt-signup" href="/signup">Sign up instead.</a>
 
-<script src="/javascript/login.js"></script>
+<script src="/js/login.js"></script>
