--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -15,4 +15,4 @@
 
 <a id="alt-login" href="/login">Login instead.</a>
 
-<script src="/javascript/signup.js"></script>
+<script src="/js/signup.js"></script>
