--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,11 +1,11 @@
 <h2>Edit Post</h2>
 
-<form class="post-edit-form">
+<form class="edit-post-form">
     <div>
-        <input id="post-title" type="text" value="{{post.title}}"/>
+        <input id="edit-post-title" type="text" value="{{post.title}}"/>
     </div>
     <div>
-        <textarea id="post-content">{{post.post_content}}</textarea>
+        <textarea id="edit-post-content">{{post.post_content}}</textarea>
     </div>
     <div>
         Posted by {{post.username}}
