--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,5 @@
+
 <h2>Tester</h2>
-<ul class="all-posts-list">
-  {{#each posts as |post|}}
-  <li>
-    {{> post-details post }}
-  </li>
-  {{/each}}
-</ul>
+{{#each allPosts as |post|}}
+  {{> post-details}}
+{{/each}}
