--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,4 +9,6 @@
 </div>
 
 {{/each}}
-<button type="submit" class="add-post-btn"><a href="/add-post">Create Post</a></button>
+<div id="flexbox-add-btn">
+<button type="submit" class="add-post-btn"><a href="/add-post">+ New Post</a></button>
+</div>
