--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,11 @@
         <ul class="main-nav">
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/login">Login</a>
+              {{#if logged_in}}
+                    <a href="/logout">Logout</a>
+                {{else}}
+                    <a href="/login">Login</a>
+                {{/if}}
         </ul>
         </nav>
         <h1 id="main-title">The Tech Blog</h1>
