--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -11,3 +11,9 @@
         Posted by {{post.username}}
     </div>
 </form>
+
+  <form class="new-comment-form">
+        <label for="comment-text">Comment:</label>
+        <textarea id="comment-text" name="comment-text"></textarea>
+        <button type="submit">Submit</button>
+    </form>
