--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="post-container">
     <div class="post-heading">
-        <span><a href="/post/{{id}}">{{post_title}}</a></span><span style="float:right">Posted by {{User.username}}</span><br>
+        <span><a id="post-title" href="/post/{{id}}">{{post_title}}</a></span><span style="float:right">Posted by {{User.username}}</span><br>
     </div>
     <div class="post-body">
         <p>{{post_content}}</p>
     </div>
     <div class="comments">
-           <span style="float:right">
+           <span style="float:left">
         {{#each Comments as |comment|}}
             {{comment.comment_text}}
             -{{User.username}}
