--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 {{#each allUserPosts as |post|}}
 
-<div class="blog-post-container">
+<div class="post-container">
     <h2>
         <a class="post-title" href="/post/{{id}}">{{post.post_title}}</a>
         <p>Posted by: {{post.User.username}}</p>
