--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,7 +139,7 @@ padding: 10px 15px;
 }
 
 .add-post-form {
-    border: 2px solid black;
+    border: 4px solid black;
     padding-left: 0px;
     display: flex;
     align-items: center;
@@ -183,7 +183,7 @@ padding: 10px 15px;
 /* Post containers */
 
 .post-container {
-    border: 2px solid black;
+    border: 4px solid black;
     margin: 80px;
 
 }
@@ -234,4 +234,53 @@ padding: 10px 15px;
     align-items: end;
     justify-content: center;
     margin-top: 250px;
+}
+
+
+/* Post comment styling */
+
+.comment-container {
+    border: 4px solid black;
+    margin: 80px;
+
+}
+
+#blank-header {
+    background-color: var(--main-black);
+    padding: 23px;
+}
+
+
+/* Add comment form  styling */
+
+.new-comment-form {
+    border: 4px solid black;
+    margin: 80px;
+}
+
+#comment-header {
+    font-size: 25px;
+    color: var(--main-green);
+    background-color: var(--main-black);
+    text-decoration: none;
+    padding: 5px;
+}
+
+
+.new-comment-form button {
+    background-color: rgb(97, 94, 94);
+    color: var(--main-green);
+    height: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 1330px;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+}
+
+.new-comment-form textarea {
+    margin: 20px;
+    height: 60px;
+    width: 1330px;
 }
